fixed list result icon overlapping with hidden menu

--- a/public/search/css/list_results2.css
+++ b/public/search/css/list_results2.css
@@ -8,6 +8,7 @@
   position:relative;
   background-color:rgba(74,91,99,1);
   margin-bottom:10%;
+  z-index:0;
 }
 
 /*BOX BORDER RULES*/
@@ -138,7 +139,6 @@
   right:0;
   height:13%;
   transition:all .2s linear;
-  z-index:2;
 }
 
 .favorite-btn:hover{
