--- a/public/search/css/main.css
+++ b/public/search/css/main.css
@@ -8,9 +8,10 @@
 
 .mascot-message{
   display:none;
-  position:absolute;
+  position:fixed;
   bottom:1%;
   right:1%;
   height:300px;
   margin:0;
+  z-index:10;
 }
